--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salut le super batch #654</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <h1>Salut tout le monde! Alons y sur cette aventure!</h1>
   </body>
 </html>
